@@ -17,6 +17,8 @@ sub
  1... 2... 3... 4... 5... 6... 7... 8... 9...
 blit, fill
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
+release
+ 1... 2...
 
 ------ Array2 --------
 
@@ -32,6 +34,8 @@ sub
  1... 2...
 slice
  1... 2... 3... 4... 5... 6... 7... 8...
+release
+ 1... 2... 3... 4...
 
 ------ Array3 --------
 
@@ -45,6 +49,8 @@ dim
  1... 2... 3... 4... 5... 6...
 slice1
  1... 2... 3... 4... 5... 6... 7...
+release
+ 1... 2... 3... 4... 5... 6...
 
 ------ Reshaping --------
 
@@ -58,4 +64,4 @@ reshape_2
 output_value/input_value
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12... 13... 14...
 map_file
- 1... 2... 3... 4...
+ 1... 2... 3... 4... 5... 5...
